feat(JavaJCE-remote): gRPC-remote JCA/JCE provider with real cert export (WS-E completion)
New separate module SoftHSMv3RemoteProvider bridging javax.crypto/
java.security to the engine over remoting/grpc — Ed25519, ML-DSA-44/65/87,
ML-KEM-512/768/1024, plus getSelfSignedCertificate (the only way a remote
public key's bytes leave the server, since no other verb returns them).
Fixed two real, live-caught build bugs: protoc/protobuf-java version
mismatch (explicit pin required, grpc-protobuf's transitive version
doesn't match), and sessionHandle declared long against a uint32 wire
type. Verified with a 14-case JUnit suite against the real running
pqc-grpc container — first run caught the cert verb as UNIMPLEMENTED
because the container predated the Rust-side commit; rebuilt it, then
all 14 passed. scripts/local-gate.sh gained a matching --javajce-remote
opt-in step, sabotage-tested to confirm its pass/fail detection is real.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>